--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Love letter online</title>
     <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+    </script>
     <link rel="stylesheet" type="text/css" href="/css/index.css">
   </head>
   <body>
