--- a/index.html
+++ b/index.html
@@ -25,11 +25,17 @@
             <button type='submit' id='focusPlayer3' class='focus'>Player 3</button>
             <button type='submit' id='focusPlayer4' class='focus'>Player 4</button>
         </div>
+        <div class='priestEffect'>
+            <p id='priestEffect' class='cardEffect'>Which card do you</br>want to see?</p>
+        </div>
+        <div class='baronEffect'>
+            <p id='baronEffect' class='cardEffect'>Who do you want</br>to fight with?</p>
+        </div>
         <div class='princeEffect'>
-            <p id='princeEffect'>Who should throw</br> his card?</p>
+            <p id='princeEffect' class='cardEffect'>Who should throw</br> his card?</p>
         </div>
         <div class='kingEffect'>
-            <p id='kingEffect'>Who do you want</br>to exchange with?</p>
+            <p id='kingEffect' class='cardEffect'>Who do you want</br>to exchange with?</p>
         </div>
     </div>
     <div id='deck'>
